Trying to make sure the button isn't too wide!

--- a/helpmehelpyou/src/Components/BurgerMenu/burgerMenu.css
+++ b/helpmehelpyou/src/Components/BurgerMenu/burgerMenu.css
@@ -191,7 +191,6 @@
   }
   .login-button {
     margin-bottom: 0.1rem;
-    max-width: fit-content;
   }
   .register-button {
     margin-top: 0.1rem;
